Added authetication with JWTs, added /auth/login route to backend
